# dynamometer-software

./: .csharpierignore  .gitattributes  .gitignore  .gitmodules  Directory.Build.props  Dyno.slnx  README.md
.github/workflows/: build.yml  firmware.yml
Core/Inc/Config/: config.h
Scripts/: README.md  build-docker.sh  flash.ps1  flash.sh  generate.ps1  generate.sh
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
firmware/: .gitignore  CMakeLists.txt  README.md  cubemx.Dockerfile  stm32_dyno_firmware_v2.ioc
firmware/Core/: README.md
firmware/Core/Inc/: FreeRTOSConfig.h
firmware/Core/Src/: main.c  stm32h7xx_it.c
firmware/Drivers/ADS1115/: README.md
firmware/Middlewares/CircularBuffer/: README.md
firmware/Scripts/: README.md  build-docker.ps1  build-docker.sh  flash.ps1  flash.sh  get-tools.ps1  get-tools.sh  regen-cube.ps1  regen-cube.sh
firmware/Scripts/tools/: README.md
firmware/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
firmware/tests/: CMakeLists.txt  circular_buffer_tests.cpp  encoder_math_tests.cpp  sysconfig_tests.cpp  usb_framer_tests.cpp  usb_rx_ring_tests.cpp
firmware/tests/stubs/: FreeRTOS.h  task.h
firmware/tools/message_gen/: README.md  generate.py
scripts/: generate.ps1  generate.sh  run.ps1  run.sh
scripts/udev/: 99-dyno-cdc.rules
src/Dyno.App/: App.axaml  App.axaml.cs  Dyno.App.csproj  Program.cs  README.md  app.manifest
src/Dyno.App/Controls/: IPlotSeries.cs  TimeSeriesPlot.cs
src/Dyno.Core/: DeviceClient.cs  DeviceCommandException.cs  Dyno.Core.csproj  ForceSensorSampleRate.cs  README.md  TelemetryLogWorker.cs  TelemetryLogger.cs  ThreadState.cs
stm32_dyno_firmware_v2/: README.md
tests/Dyno.Core.Tests/: CommandOpcodeTests.cs  ConfigBundleTests.cs  ConfigOverridesTests.cs  DerivedQuantitiesTests.cs  DeviceClientTests.cs  DeviceScanParserTests.cs  Dyno.Core.Tests.csproj  ErrorCatalogTests.cs  ErrorDecoderTests.cs  FirmwareCommandsTests.cs  FirmwareConfigFileTests.cs  ForceSensorSampleRateTests.cs  MessageContractTests.cs  PlottingTests.cs  PortAliasTests.cs  RawCaptureTests.cs  StreamParserTests.cs  SysConfigTests.cs  TelemetryExporterTests.cs  TelemetryLogWorkerTests.cs  TelemetryLoggerTests.cs  ThreadStateTests.cs  TimestampUnwrapperTests.cs  UsbFrameTests.cs  Wire.cs
tools/message_gen/: .gitignore  README.md  check.py  error_msg_generate.py  generate.py
(+131 files in other folders)
